--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 main {
   margin-top: 175px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   main {
     margin-top: 28px;
   }
@@ -24,9 +24,9 @@ main {
   background-color: white;
   border-radius: 10px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard {
-    max-width: 343px;
+    width: 343px;
   }
 }
 
@@ -35,7 +35,7 @@ main {
   flex-direction: row;
   flex-wrap: nowrap;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__wrap {
     flex-direction: column;
     flex-wrap: wrap;
@@ -43,11 +43,12 @@ main {
 }
 
 .productCard__image {
-  width: 100%;
+  width: 300px;
   border-radius: 10px 0 0 10px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__image {
+    width: 100%;
     height: auto;
     border-radius: 10px 10px 0 0;
   }
@@ -56,7 +57,7 @@ main {
 .productCard__info {
   padding: 31px 32px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__info {
     padding: 23px 24px;
   }
@@ -76,7 +77,7 @@ main {
   line-height: 1;
   margin-bottom: 0;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__title {
     margin-top: 11px;
   }
@@ -89,7 +90,7 @@ main {
   font-weight: 500;
   color: hsl(228deg, 12%, 48%);
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__desc {
     margin-top: 15px;
   }
@@ -100,7 +101,7 @@ main {
   align-items: center;
   margin-top: 25px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__priceBlock {
     margin-top: 20px;
   }
@@ -125,7 +126,7 @@ main {
 .productCard__addToCartButton {
   margin-top: 26px;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .productCard__addToCartButton {
     margin-top: 17px;
   }
@@ -158,7 +159,7 @@ main {
   left: 63px;
   background: url("../images/icon-cart.svg") no-repeat;
 }
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .button--purchase:before {
     left: 94px;
   }
@@ -200,7 +201,7 @@ footer {
   color: hsl(225deg, 100%, 94%);
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 640px) {
   .attribution {
     flex-wrap: wrap;
   }
