--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -15,7 +15,7 @@ main {
     border-radius: 10px;
 
     @media screen and (max-width: $mobile-size) {
-        max-width: 343px;
+        width: 343px;
     }
 }
 
@@ -31,10 +31,11 @@ main {
 }
 
 .productCard__image {
-    width: 100%;
+    width: 300px;
     border-radius: 10px 0 0 10px;
 
     @media screen and (max-width: $mobile-size) {
+        width: 100%;
         height: auto;
         border-radius: 10px 10px 0 0;
     }
