--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@ body {
   background-color: hsl(30deg, 38%, 92%);
 }
 
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 /*  Main    */
 main {
   margin-top: 175px;
@@ -115,7 +124,6 @@ main {
 }
 
 .productCard__prevPrice {
-  text-decoration: line-through;
   display: inline-block;
   font-size: 13px;
   font-family: "Montserrat", sans-serif;
